# cpp_inference

ESRGAN/: Note.txt  Python_inference.ipynb
ESRGAN/src/: main.cpp
MobedSR/: CMakeLists.txt  Python_inference.ipynb
MobedSR/src/.ipynb_checkpoints/: main-checkpoint.cpp
aibox_mobile/: .gitignore  CMakeLists.txt  Note.txt  README.md
aibox_mobile/src/: base_model.h  main.cpp  pw_ai_call.cpp  pw_ai_call.h  timer.h
aibox_mobile/src/.ipynb_checkpoints/: base_model-checkpoint.cpp  ir_model-checkpoint.cpp  ir_model-checkpoint.h
image_check/: CMakeLists.txt  CheckOpenCV_cpp.txt
image_check/src/: Display.cpp
load_image/: Note.txt  inference.ipynb
load_image/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  inference-checkpoint.ipynb
load_image/models/: convnext-tiny-llie-sim.xml  efficientunet-v2-nano-fullpipeline.xml  reseffnet_gan_div4.xml  reseffnet_gan_div4_1088_1920.xml
load_image/src/: Makefile  cmake_install.cmake  load_image
load_image/src/.ipynb_checkpoints/: CMakeCache-checkpoint.txt  load_image-checkpoint.cpp
ncnn_Inference/: CMakeLists.txt  inference.ipynb  model_inference.cpp  video_inference.cpp
ncnn_Inference/models/: convnext_nano.ncnn.param  convnext_tiny.ncnn.param  efficientunet_v2_nano_llie.ncnn.param  reseffnet_gan_div4.ncnn.param
ncnn_Inference/models/old_NCNN/: convnext-tiny-llie-sim-opt.param  convnext-tiny-llie-sim.onnx  convnext-tiny-llie.onnx
ncnn_Inference/models/other/: convnext.ncnn.param  convnext.pnnx.param
puwell_image_mov/: CMakeLists.txt  main.cpp
text_pyTorch_cpp/: CMakeLists.txt  dcgan.cpp
tf_lite_inference/models/: reseffnet_gan_div4_float16.tflite  reseffnet_gan_div4_float32.tflite  residual-efficientunet-enlight_float16.tflite  residual-efficientunet-enlight_float32.tflite
tf_lite_inference/src/: main.cpp
